feature/premium-backend-1: added and modifed the existing api's according to the premium subscription logic
